<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <ImageView
        android:id="@+id/iv_base"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:src="@drawable/rectangle_base_white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />


    <Button
        android:id="@+id/btn_upload"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/upload"
        app:layout_constraintEnd_toEndOf="@+id/iv_base"
        app:layout_constraintTop_toTopOf="@+id/iv_base" />

    <Button
        android:id="@+id/btn_edit"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/edit"
        app:layout_constraintEnd_toEndOf="@+id/iv_base"
        app:layout_constraintTop_toBottomOf="@+id/btn_upload" />

    <TextView
        android:id="@+id/tv_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/class_dummy"
        android:layout_marginStart="15dp"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@id/iv_base"
        app:layout_constraintTop_toTopOf="@+id/iv_base" />

    <TextView
        android:id="@+id/tv_class_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/class_dummy"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@id/iv_base"
        app:layout_constraintTop_toBottomOf="@+id/tv_date" />


</androidx.constraintlayout.widget.ConstraintLayout>